[project]
name = "rbz-api-tester"
version = "0.1.0"
description = "Automation framework to test API endpoints"
authors = [
    { name = "Reblaze Developers", email = "developers@reblaze.com" }
]
dependencies = [
    "rich>=13.7.1",
    "haralyzer>=2.4.0",
    "kubernetes>=29.0.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
rbz_api_test = "rbz_api_tester.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "isort>=5.13.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["rbz_api_tester"]
